--- a/resources/vagrant/Vagrantfile
+++ b/resources/vagrant/Vagrantfile
@@ -119,9 +119,9 @@ end
 
 Vagrant::Config.run do |config|
   config.vm.define :web do |web_config|
-    web_config.vm.box = "CentOS 6.4 x86_64"
+    web_config.vm.box = "centos_chef"
     web_config.vm.network :bridged
-    web_config.vm.forward_port 80, 8080
+    web_config.vm.forward_port 80, 8888
     web_config.vm.provision :chef_solo do |chef|
       chef.cookbooks_path = "~/src/mobingi/mocloud/resources/chef/cookbooks"
       chef.roles_path = "~/src/mobingi/mocloud/resources/chef/roles"
@@ -132,11 +132,11 @@ Vagrant::Config.run do |config|
   end
 
   config.vm.define :db do |db_config|
-    db_config.vm.box = "CentOS 6.4 x86_64"
+    db_config.vm.box = "centos_chef"
     db_config.vm.network :bridged
     db_config.vm.forward_port 3306, 3306
     db_config.vm.provision :chef_solo do |chef|
-      chef.cookbooks_path = "~/src/mobingi/mocloud/resources/chef/cookbooks"
+      chef.cookbooks_path = "/Users/keithyau/src/mobingi/mocloud/resources/chef/cookbooks"
       chef.add_recipe("mysql::server")
       chef.json = {
         #"mysql" => {
