--- a/resources/vagrant/Vagrantfile
+++ b/resources/vagrant/Vagrantfile
@@ -129,6 +129,7 @@ Vagrant::Config.run do |config|
       chef.cookbooks_path = "~/src/mobingi/mocloud/resources/chef/cookbooks"
       chef.add_recipe("php")
       chef.add_recipe("drush-centos")
+      chef.add_recipe("git")
     end
     dev_config.vm.network :hostonly, "10.0.1.10", :adapter => 2
     dev_config.vm.network :bridged
@@ -143,7 +144,8 @@ Vagrant::Config.run do |config|
       chef.cookbooks_path = "~/src/mobingi/mocloud/resources/chef/cookbooks"
       chef.roles_path = "~/src/mobingi/mocloud/resources/chef/roles"
       chef.add_role("chefclient-apache")
-      chef.add_recipe("drush")
+      chef.add_recipe("drush-centos")
+      chef.add_recipe("git")
       chef.data_bags_path = "~/chef/data_bags"
     end
   end
