--- a/resources/vagrant/Vagrantfile
+++ b/resources/vagrant/Vagrantfile
@@ -132,7 +132,8 @@ Vagrant::Config.run do |config|
     dev_config.vm.box = "centos_chef"
     dev_config.vm.provision :chef_solo do |chef|
       chef.cookbooks_path = "~/src/mobingi/mocloud/resources/chef/cookbooks"
-      chef.add_recipe("php")
+      chef.roles_path = "~/src/mobingi/mocloud/resources/chef/roles"
+      chef.add_role("chefclient-apache")
       chef.add_recipe("drush-centos")
       chef.add_recipe("git")
     end
