--- a/resources/vagrant/Vagrantfile
+++ b/resources/vagrant/Vagrantfile
@@ -185,8 +185,7 @@ Vagrant::Config.run do |config|
     nosql_config.vm.box = "centos_chef"
     nosql_config.vm.provision :chef_solo do |chef|
       chef.cookbooks_path = "~/src/mobingi/mocloud/resources/chef/cookbooks"
-      chef.add_recipe("mongodb::10gen_repo")
-      chef.add_recipe("mongodb")
+      chef.add_recipe("mongodb::default")
       chef.add_recipe("memcached::default")
     end
     nosql_config.vm.network :hostonly, "10.0.1.13", :adapter => 2
