--- a/resources/vagrant/Vagrantfile
+++ b/resources/vagrant/Vagrantfile
@@ -38,7 +38,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # the path on the host to the actual folder. The second argument is
   # the path on the guest to mount the folder. And the optional third
   # argument is a set of non-required options.
-  # config.vm.synced_folder "../data", "/vagrant_data"
+  config.vm.synced_folder "src/", "/var/www/html"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
@@ -146,7 +146,6 @@ Vagrant::Config.run do |config|
     web_config.vm.box = "centos_chef"
     web_config.vm.network :hostonly, "10.0.1.11", :adapter => 2
     web_config.vm.network :bridged, :adapter => 3
-    web_config.vm.forward_port 80, 80
     web_config.vm.provision :chef_solo do |chef|
       chef.cookbooks_path = "~/src/mobingi/mocloud/resources/chef/cookbooks"
       chef.roles_path = "~/src/mobingi/mocloud/resources/chef/roles"
@@ -162,7 +161,6 @@ Vagrant::Config.run do |config|
   config.vm.define :db do |db_config|
     db_config.vm.box = "centos_chef"
     db_config.vm.network :hostonly, "10.0.1.12", :adapter => 2
-    db_config.vm.forward_port 3306, 3306
     db_config.vm.provision :chef_solo do |chef|
       chef.cookbooks_path = "~/src/mobingi/mocloud/resources/chef/cookbooks"
       chef.add_recipe("mysql::server")
