--- a/resources/chef/roles/chefclient-nginx.json
+++ b/resources/chef/roles/chefclient-nginx.json
@@ -9,7 +9,7 @@
   "chef_type": "role",
   "run_list": [
     "recipe[nginx]",
-    "recipe[php]"
+    "recipe[php-fpm]"
   ],
   "env_run_lists": {
   }
