--- a/resources/chef/roles/chefclient-nginx.json
+++ b/resources/chef/roles/chefclient-nginx.json
@@ -10,7 +10,7 @@
   "run_list": [
     "recipe[nginx]",
     "recipe[php]",
-    "recipe[php-fpm]"
+    "recipe[nginx-php-fpm]"
   ],
   "env_run_lists": {
   }
