--- a/resources/chef/roles/chefclient-nginx.json
+++ b/resources/chef/roles/chefclient-nginx.json
@@ -8,9 +8,9 @@
   },
   "chef_type": "role",
   "run_list": [
-    "recipe[nginx]",
     "recipe[php]",
-    "recipe[php-fpm]"
+    "recipe[php-fpm]".
+    "recipe[nginx]"
   ],
   "env_run_lists": {
   }
