--- a/resources/chef/roles/chefclient-nginx.json
+++ b/resources/chef/roles/chefclient-nginx.json
@@ -10,8 +10,7 @@
   "run_list": [
     "recipe[php]",
     "recipe[php-fpm]",
-    "recipe[nginx]",
-    "recipe[microcache]"
+    "recipe[nginx]"
   ],
   "env_run_lists": {
   }
