Finishing chefclient-nginx-microcache

--- a/resources/chef/roles/chefclient-nginx-gl.json
+++ b/resources/chef/roles/chefclient-nginx-gl.json
@@ -9,8 +9,9 @@
   "chef_type": "role",
   "run_list": [
     "recipe[basicservice]",
-    "recipe[nginx]",
     "recipe[php]",
+    "recipe[php-fpm]",
+    "recipe[nginx]",
     "recipe[diskmount]"
   ],
   "env_run_lists": {
