Add composer cookbook

--- a/resources/chef/roles/chefclient-nginx-gl-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-gl-microcache.json
@@ -13,7 +13,8 @@
     "recipe[php-fpm]",
     "recipe[nginx]",
     "recipe[microcache]",
-    "recipe[diskmount]"
+    "recipe[diskmount]",
+    "recipe[composer]"
   ],
   "env_run_lists": {
   }
