--- a/resources/chef/roles/chefclient-nginx-gl-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-gl-microcache.json
@@ -10,6 +10,7 @@
   "run_list": [
     "recipe[basicservice]",
     "recipe[php]",
+    "recipe[php-ext-centos]",
     "recipe[php-fpm]",
     "recipe[nginx]",
     "recipe[microcache]",
