--- a/resources/chef/roles/chefclient-nginx-gl.json
+++ b/resources/chef/roles/chefclient-nginx-gl.json
@@ -10,6 +10,7 @@
   "run_list": [
     "recipe[basicservice]",
     "recipe[php]",
+    "recipe[phpext-centos]",
     "recipe[php-fpm]",
     "recipe[nginx]",
     "recipe[diskmount]",
