--- a/resources/chef/roles/chefclient-nginx.json
+++ b/resources/chef/roles/chefclient-nginx.json
@@ -9,6 +9,7 @@
   "chef_type": "role",
   "run_list": [
     "recipe[php]",
+    "recipe[php-ext-centos]",
     "recipe[php-fpm]",
     "recipe[nginx]",
     "recipe[composer]"
