Add deploycode to chef role for nginx roles

--- a/resources/chef/roles/chefclient-nginx-gl.json
+++ b/resources/chef/roles/chefclient-nginx-gl.json
@@ -14,7 +14,8 @@
     "recipe[php-fpm]",
     "recipe[nginx]",
     "recipe[diskmount]",
-    "recipe[composer]"
+    "recipe[composer]",
+    "recipe[deploycode]"
   ],
   "env_run_lists": {
   }
