--- a/resources/chef/roles/chefclient-nginx-gl-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-gl-microcache.json
@@ -15,7 +15,8 @@
     "recipe[nginx]",
     "recipe[microcache]",
     "recipe[diskmount]",
-    "recipe[composer]"
+    "recipe[composer]",
+    "recipe[deploycode]"
   ],
   "env_run_lists": {
   }
