--- a/resources/chef/roles/chefclient-nginx-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-microcache.json
@@ -13,7 +13,8 @@
     "recipe[php-fpm]",
     "recipe[nginx]",
     "recipe[microcache]",
-    "recipe[composer]"
+    "recipe[composer]",
+    "recipe[deploycode]"
   ],
   "env_run_lists": {
   }
