--- a/resources/chef/roles/chefclient-nginx.json
+++ b/resources/chef/roles/chefclient-nginx.json
@@ -12,7 +12,8 @@
     "recipe[php-ext-centos]",
     "recipe[php-fpm]",
     "recipe[nginx]",
-    "recipe[composer]"
+    "recipe[composer]",
+    "recipe[deploycode]"
   ],
   "env_run_lists": {
   }
