--- a/resources/chef/cookbooks/drush/.kitchen.yml
+++ b/resources/chef/cookbooks/drush/.kitchen.yml
@@ -3,14 +3,16 @@ driver:
   name: vagrant
 
 provisioner:
-  name: chef_zero
+  name: chef_solo
 
 platforms:
   - name: ubuntu-12.04
+    run_list:
+      - recipe[apt]
   - name: centos-6.4
 
 suites:
   - name: default
     run_list:
-      - recipe[activelamp_drupal::default]
+      - recipe[drush::default]
     attributes:
