--- a/resources/chef/roles/chefclient-nginx-gl-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-gl-microcache.json
@@ -14,9 +14,9 @@
     "recipe[php-fpm]",
     "recipe[nginx]",
     "recipe[microcache]",
-    "recipe[diskmount]",
     "recipe[composer]",
-    "recipe[deploycode]"
+    "recipe[deploycode]",
+    "recipe[diskmount]"
   ],
   "env_run_lists": {
   }
