--- a/resources/chef/roles/chefclient-nginx-gl-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-gl-microcache.json
@@ -8,6 +8,7 @@
   },
   "chef_type": "role",
   "run_list": [
+    "recipe[build-essential]",
     "recipe[basicservice]",
     "recipe[php]",
     "recipe[php-ext-centos]",
