--- a/resources/chef/roles/chefclient-nginx-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-microcache.json
@@ -8,6 +8,8 @@
   },
   "chef_type": "role",
   "run_list": [
+    "recipe[build-essential]",
+    "recipe[]",
     "recipe[php]",
     "recipe[php-ext-centos]",
     "recipe[php-fpm]",
