--- a/resources/chef/roles/chefclient-nginx-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-microcache.json
@@ -9,7 +9,7 @@
   "chef_type": "role",
   "run_list": [
     "recipe[build-essential]",
-    "recipe[]",
+    "recipe[basicservice]",
     "recipe[php]",
     "recipe[php-ext-centos]",
     "recipe[php-fpm]",
