Pushing Changes of cookbooks

--- a/resources/chef/roles/chefclient-nginx-gl-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-gl-microcache.json
@@ -8,6 +8,7 @@
   },
   "chef_type": "role",
   "run_list": [
+    "recipe[git]",
     "recipe[build-essential]",
     "recipe[basicservice]",
     "recipe[php]",
@@ -17,7 +18,8 @@
     "recipe[microcache]",
     "recipe[composer]",
     "recipe[deploycode]",
-    "recipe[diskmount]"
+    "recipe[diskmount]",
+    "recipe[drupalsetting]"
   ],
   "env_run_lists": {
   }
