--- a/resources/chef/roles/chefclient-nginx-gl.json
+++ b/resources/chef/roles/chefclient-nginx-gl.json
@@ -8,6 +8,7 @@
   },
   "chef_type": "role",
   "run_list": [
+    "recipe[git]",
     "recipe[build-essential]",
     "recipe[basicservice]",
     "recipe[php]",
@@ -16,7 +17,8 @@
     "recipe[nginx]",
     "recipe[composer]",
     "recipe[deploycode]",
-    "recipe[diskmount]"
+    "recipe[diskmount]",
+    "recipe[drupalsetting]"
   ],
   "env_run_lists": {
   }
