--- a/resources/chef/cookbooks/yum-epel/.gitignore
+++ b/resources/chef/cookbooks/yum-epel/.gitignore
@@ -1,16 +1,17 @@
 .vagrant
 Berksfile.lock
-Gemfile.lock
 *~
 *#
 .#*
 \#*#
 .*.sw[a-z]
 *.un~
-.bundle
-.cache
-.kitchen
-bin
+/cookbooks
+
+# Bundler
+Gemfile.lock
+bin/*
+.bundle/*
+
+.kitchen/
 .kitchen.local.yml
-.coverage
-tmp
