--- a/resources/chef/cookbooks/yum-epel/Gemfile
+++ b/resources/chef/cookbooks/yum-epel/Gemfile
@@ -1,11 +1,13 @@
 source 'https://rubygems.org'
 
-group :lint do
-  gem 'foodcritic', '~> 3.0'
-  gem 'rubocop', '~> 0.24'
-end
+gem 'berkshelf',  '~> 2.0'
+gem 'chefspec',   '~> 3.0'
+gem 'foodcritic', '~> 3.0'
+gem 'rubocop'
 
-group :unit do
-  gem 'chefspec',   '~> 4.0'
-  gem 'berkshelf'
+group :integration do
+  gem 'test-kitchen', '~> 1.0'
+  gem 'kitchen-vagrant', '~> 0.11'
+  gem 'kitchen-digitalocean'
+  gem 'kitchen-ec2'
 end
