Add back drupalsetting cookbook

--- a/resources/chef/roles/chefclient-nginx-gl-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-gl-microcache.json
@@ -18,6 +18,7 @@
     "recipe[microcache]",
     "recipe[composer]",
     "recipe[deploycode]",
+    "recipe[drupalsetting]",
     "recipe[diskmount]"
   ],
   "env_run_lists": {
