--- a/resources/chef/roles/chefclient-nginx-gl-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-gl-microcache.json
@@ -17,9 +17,8 @@
     "recipe[nginx]",
     "recipe[microcache]",
     "recipe[composer]",
-    "recipe[deploycode]",
-    "recipe[drupalsetting]",
-    "recipe[diskmount]"
+    "recipe[diskmount]",
+    "recipe[deploycode]"
   ],
   "env_run_lists": {
   }
