Apply changes top deploycode, drupal_settings and updatevault cookbook, then change role list to make changes effective

--- a/resources/chef/roles/chefclient-nginx-gl-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-gl-microcache.json
@@ -11,6 +11,7 @@
     "recipe[git]",
     "recipe[build-essential]",
     "recipe[basicservice]",
+    "recipe[updatevault]",
     "recipe[php]",
     "recipe[php-ext-centos]",
     "recipe[php-fpm]",
