--- a/resources/chef/roles/chefclient-nginx.json
+++ b/resources/chef/roles/chefclient-nginx.json
@@ -11,13 +11,13 @@
     "recipe[git]",
     "recipe[build-essential]",
     "recipe[basicservice]",
+    "recipe[updatevault]",
     "recipe[php]",
     "recipe[php-ext-centos]",
     "recipe[php-fpm]",
     "recipe[nginx]",
     "recipe[composer]",
-    "recipe[deploycode]",
-    "recipe[drupalsetting]"
+    "recipe[deploycode]"
   ],
   "env_run_lists": {
   }
