Changing role's runlist to use php55. fix parameter name in php55-fpm

--- a/resources/chef/roles/chefclient-nginx-gl.json
+++ b/resources/chef/roles/chefclient-nginx-gl.json
@@ -13,9 +13,8 @@
     "recipe[basicservice]",
     "recipe[updatevault]",
     "recipe[nginx]",
-    "recipe[php]",
-    "recipe[php-ext-centos]",
-    "recipe[php-fpm]",
+    "recipe[php55]",
+    "recipe[php55-fpm]",
     "recipe[composer]",
     "recipe[diskmount]",
     "recipe[deploycode]"
