--- a/resources/chef/roles/chefclient-nginx-gl-microcache.json
+++ b/resources/chef/roles/chefclient-nginx-gl-microcache.json
@@ -13,9 +13,10 @@
     "recipe[basicservice]",
     "recipe[updatevault]",
     "recipe[nginx]",
-    "recipe[php55]",
-    "recipe[php55-fpm]",
     "recipe[microcache]",
+    "recipe[php]",
+    "recipe[php-ext-centos]",
+    "recipe[php-fpm]",
     "recipe[composer]",
     "recipe[diskmount]",
     "recipe[deploycode]"
