putting glusterfs cookbook into role list

--- a/resources/chef/roles/chefclient-nginx-gl.json
+++ b/resources/chef/roles/chefclient-nginx-gl.json
@@ -11,6 +11,7 @@
     "recipe[git]",
     "recipe[build-essential]",
     "recipe[basicservice]",
+    "recipe[glusterfs]",
     "recipe[updatevault]",
     "recipe[nginx]",
     "recipe[php]",
