--- a/resources/chef/cookbooks/php55-fpm/templates/default/www.conf
+++ b/resources/chef/cookbooks/php55-fpm/templates/default/www.conf
@@ -37,9 +37,9 @@ listen.mode = 0660
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
 ; RPM: apache Choosed to be able to access some dir as httpd
-user = nginx
+user = ec2-user
 ; RPM: Keep a group allowed to write in log dir.
-group = nginx
+group = ec2-user
 
 ; Choose how the process manager will control the number of child processes.
 ; Possible Values:
